<resources>
    <string name="app_name" translatable="false">Olauncher</string>
    <string name="github" translatable="false">Github</string>
    <string name="lock_layout_description" translatable="false">lock layout description to be used a unique id to lock screen</string>
    <string name="olauncher_pro" translatable="false">Olauncher Pro</string>
    <string name="digital_minimalism" translatable="false"><u>Digital Minimalism</u></string>
    <string name="new_app_note_safe" translatable="false"><u>Note to Self</u>\n<sub><small>(Ad-Free)</small></sub></string>
    <string name="new_app_minimal_todo_lists" translatable="false"><u>Minimal Todo Lists</u>\n<sub><small>(Ad-Free)</small></sub></string>
    <string name="day_battery" formatted="false" translatable="false">%s, %d%%</string>
    <string name="tag_0" translatable="false">0</string>
    <string name="tag_1" translatable="false">1</string>
    <string name="tag_2" translatable="false">2</string>
    <string name="tag_3" translatable="false">3</string>
    <string name="tag_4" translatable="false">4</string>
    <string name="tag_5" translatable="false">5</string>
    <string name="tag_6" translatable="false">6</string>
    <string name="tag_7" translatable="false">7</string>
    <string name="tag_8" translatable="false">8</string>
    <string name="time_spent_min" translatable="false"><b>%1$sm</b></string>
    <string name="time_spent_hour" translatable="false">%1$sh %2$sm</string>
    <string name="x_twitter" translatable="false">X/Twitter</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="app">App</string>
    <string name="set_as_default_launcher">Set as default launcher</string>
    <string name="set_as_default_launcher_u"><u>Set as default launcher</u></string>
    <string name="set_as_default_launcher_first">Set Olauncher default first</string>
    <string name="app_text_color">Text color</string>
    <string name="double_tap_to_lock_screen">Double tap to lock</string>
    <string name="home_button_show_recents">Home button for recents</string>
    <string name="admin_permission_message">Olauncher promises to use the accessibility permission responsibly. Olauncher does not collect or share any data.</string>
    <string name="about">About</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="change_default_launcher">Change default launcher</string>
    <string name="privacy">Privacy</string>
    <string name="share">Share</string>
    <string name="share_now">Share now</string>
    <string name="rate">Rate</string>
    <string name="rate_now">Rate now</string>
    <string name="follow">Follow</string>
    <string name="email">Email</string>
    <string name="donate">Donate</string>
    <string name="swipe_up_for_apps">1. Swipe up, or tap the folder icon, for all apps\n2. Settings: gear icon at the top of the app list\n3. Swipe right for the Oasis panel</string>
    <string name="all_apps">All apps</string>
    <string name="settings">Settings</string>
    <string name="apps_on_home_screen">Apps on home screen</string>
    <string name="daily_wallpaper_update">Daily new wallpaper</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="center">Center</string>
    <string name="home_layout_alignment">App alignment</string>
    <string name="swipe_left_app">Swipe left app</string>
    <string name="swipe_right_app">Swipe right app</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="app_drawer_tips">Tip: Start typing an app name to auto-launch it</string>
    <string name="okay">Okay</string>
    <string name="cool">Cool!</string>
    <string name="auto_show_keyboard">Auto show keyboard</string>
    <string name="hide">Hide</string>
    <string name="status_bar">Status bar on top</string>
    <string name="rename">Rename</string>
    <string name="show_date_time">Show date time</string>
    <string name="appearance">Appearance</string>
    <string name="gestures">Gestures</string>
    <string name="theme_mode">Theme mode</string>
    <string name="system_default">System</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="welcome_to_olauncher_settings">Welcome to the settings!
        \n\nRemember, if you have any questions, our About page has the answer.</string>
    <string name="rate_us_message">Hi, you won\'t see this message again.
        \n\nIf you\'re finding Olauncher useful, could you please leave a 5-star review? It\'ll mean the world to us. Thank you!</string>
    <string name="share_message">We need your help! We believe everyone should know about Olauncher and its benefits, but we can\'t do it alone.
        \n\nCould you please share Olauncher with your friends, family, and followers? Thank you for your support! ❤</string>
    <string name="keyboard_message">Hi, keyboard is the fastest way to find and launch apps in Olauncher. Can we request you to keep this On for a few more days and then decide?
        \n\nThe choice is always yours.</string>
    <string name="digital_wellbeing_message">If you want to set time limits for certain apps, Digital Wellbeing feature of Android can help you do it.           Please search for Digital Wellbeing in your phone settings and enable it.</string>
    <string name="app_usage_message">To show/hide your screen time on the home screen, please allow or disallow the app usage permission.
        \n\nNote: No app usage data is collected. Everything is processed on your device.</string>
    <string name="pro_message">Olauncher also has a pro version called Pro Launcher. It has extra features like weather, widgets, fonts, folders, AMOLED wallpapers, and so on.
        \n\nIt\'s also the best way to support the developers of Olauncher. Check it out!</string>
    <string name="wallpaper_message">Olauncher offers beautiful new wallpapers daily. Give your homescreen a fresh new look every day, for free!
        \n\nWant to try it?</string>
    <string name="accessibility_service_description">The accessibility permission is required to enable the gesture - double tap to lock . Any data acquired by Olauncher via this service will not leave your device.</string>
    <string name="support_olauncher_for_free">Support Olauncher for free by using our Amazon affiliate link.</string>
    <string name="support_olauncher_message">Every time you buy something using our link, we get a small commission. Please save the link and use it whenever you shop online.\nThank you!</string>
    <string name="open">Open link</string>
    <string name="copy">Copy</string>
    <string name="close">Close</string>
    <string name="not_now">Not now</string>
    <string name="public_roadmap">Olauncher public roadmap</string>
    <string name="roadmap">Roadmap</string>
    <string name="date">Date</string>
    <string name="date_only">Date only</string>
    <string name="bottom_on">Bottom: On</string>
    <string name="bottom_off">Bottom: Off</string>
    <string name="please_set_olauncher_as_default_first">Please set Olauncher as default first</string>
    <string name="affiliate">Affiliate</string>
    <string name="tip_start_typing_for_rename">Tip: Start typing for app RENAME option</string>
    <string name="hidden_apps_message">Note: Tap on \'Olauncher\' at the top of this Settings page to find your hidden apps.\n\nMore details available in our About page.</string>
    <string name="swipe_down_for">Swipe down for</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="accessibility_disclosure">Please turn on Olauncher\'s accessibility service in your device\'s settings to enable Double tap to lock gesture.
    \n\nPlease note that this service is only used for this particular feature. Our accessibility service does not collect or share any data.</string>
    <string name="accept">Accept</string>
    <string name="permission">Permission</string>
    <string name="double_tap_lock">Double tap to lock</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="not_working"><u>Not working?</u></string>
    <string name="info">Info</string>
    <string name="delete">Uninstall</string>
    <string name="text_size">Text size</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="please_turn_on_double_tap_to_unlock">Please turn on double tap to lock</string>
    <string name="launcher_failed_to_lock_device">Olauncher failed to lock device.\nPlease check your app settings.</string>
    <string name="long_press_to_select_app">Long press to select app</string>
    <string name="unable_to_open_app">Unable to open app</string>
    <string name="unable_to_open_app_info">Unable to open app info</string>
    <string name="copied">Copied</string>
    <string name="system_app_cannot_delete">System app, cannot delete</string>
    <string name="type_a_new_app_name_first">Type a new app name first</string>
    <string name="app_not_found">App not found</string>
    <string name="unable_to_launch_app">Unable to launch app</string>
    <string name="search_for_Launcher_or_home_app">Search for Launcher or Home app</string>
    <string name="swipe_left_app_enabled">Swipe left app enabled</string>
    <string name="swipe_right_app_enabled">Swipe right app enabled</string>
    <string name="swipe_left_app_disabled">Swipe left app disabled</string>
    <string name="swipe_right_app_disabled">Swipe right app disabled</string>
    <string name="your_wallpaper_will_update_shortly">Your wallpaper will update shortly</string>
    <string name="olauncher_is_not_default_launcher">Olauncher is not default. Wallpaper update will fail.</string>
    <string name="long_press_to_enable">Long press to enable</string>
    <string name="no_hidden_apps">No hidden apps</string>
    <string name="hidden_apps">Hidden apps</string>
    <string name="adapter_show">Show</string>
    <string name="adapter_hide">Hide</string>
    <string name="are_you_using_your_phone_or_is_your_phone_using_you">Are you using your phone, or is your phone using you?</string>
    <string name="about_olauncher">About and FAQs</string>
    <string name="screen_time">Screen time</string>
    <string name="learn_more">Learn more</string>
    <string name="did_you_know">Did you know?</string>
    <string name="oasis_todo">To-do</string>
    <string name="oasis_todo_hint">Add a task…</string>
    <string name="oasis_todo_empty">Nothing to do</string>
    <string name="oasis_notes">Notes</string>
    <string name="oasis_notes_hint">Write a note…</string>
    <string name="oasis_calendar">Calendar</string>
    <string name="oasis_calendar_empty">No events</string>
    <string name="oasis_calendar_permission">Tap to allow calendar access</string>
    <string name="oasis_calendar_today">Today</string>
    <string name="oasis_calendar_open">Open</string>
    <string name="oasis_calendar_refresh">↻</string>
    <string name="oasis_pomodoro">Pomodoro timer</string>
    <string name="oasis_pomo_work">Pomodoro</string>
    <string name="oasis_pomo_short">Short break</string>
    <string name="oasis_pomo_long">Long break</string>
    <string name="oasis_pomo_start">Start</string>
    <string name="oasis_pomo_edit_hint">Tap the time to set minutes</string>
    <string name="oasis_prev">◀</string>
    <string name="oasis_next">▶</string>
    <string name="oasis_add">＋</string>
    <string name="oasis_done">✓</string>
</resources>